--- a/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
+++ b/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
@@ -35,6 +35,10 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="StaMa, Version=2.3.0.2, Culture=neutral, PublicKeyToken=e5b57b1675b6100c, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\StaMa.StateMachine.2.3.0.2\lib\portable-net40+sl50+win+wpa81+wp80\StaMa.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
@@ -101,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
