--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,63 @@ pip-log.txt
 .mr.developer.cfg
 
 /Hub/Platform/Configs/Config/PrivateSettings.xml
+/Hub/packages/Microsoft.Azure.ServiceBus.EventProcessorHost.1.0.3/Microsoft.Azure.ServiceBus.EventProcessorHost.1.0.3.nupkg
+/Hub/packages/Microsoft.Azure.ServiceBus.EventProcessorHost.1.0.3/lib/net45-full/Microsoft.ServiceBus.Messaging.EventProcessorHost.XML
+/Hub/packages/Microsoft.Data.Edm.5.7.0/Microsoft.Data.Edm.5.7.0.nupkg
+/Hub/packages/Microsoft.Data.Edm.5.7.0/lib/net40/Microsoft.Data.Edm.xml
+/Hub/packages/Microsoft.Data.Edm.5.7.0/lib/portable-net40+sl5+wp8+win8+wpa/Microsoft.Data.Edm.xml
+/Hub/packages/Microsoft.Data.Edm.5.7.0/lib/portable-net45+wp8+win8+wpa/Microsoft.Data.Edm.xml
+/Hub/packages/Microsoft.Data.Edm.5.7.0/lib/sl4/Microsoft.Data.Edm.xml
+/Hub/packages/Microsoft.Data.OData.5.7.0/Microsoft.Data.OData.5.7.0.nupkg
+/Hub/packages/Microsoft.Data.OData.5.7.0/lib/net40/Microsoft.Data.OData.xml
+/Hub/packages/Microsoft.Data.OData.5.7.0/lib/portable-net40+sl5+wp8+win8+wpa/Microsoft.Data.OData.xml
+/Hub/packages/Microsoft.Data.OData.5.7.0/lib/portable-net45+wp8+win8+wpa/Microsoft.Data.OData.xml
+/Hub/packages/Microsoft.Data.OData.5.7.0/lib/sl4/Microsoft.Data.OData.xml
+/Hub/packages/Microsoft.Data.Services.Client.5.7.0/Microsoft.Data.Services.Client.5.7.0.nupkg
+/Hub/packages/Microsoft.Data.Services.Client.5.7.0/lib/net40/Microsoft.Data.Services.Client.xml
+/Hub/packages/Microsoft.Data.Services.Client.5.7.0/lib/portable-net45+wp8+win8+wpa/Microsoft.Data.Services.Client.xml
+/Hub/packages/Microsoft.Data.Services.Client.5.7.0/lib/sl4/Microsoft.Data.Services.Client.xml
+/Hub/packages/Microsoft.WindowsAzure.ConfigurationManager.1.8.0.0/Microsoft.WindowsAzure.ConfigurationManager.1.8.0.0.nupkg
+/Hub/packages/Newtonsoft.Json.6.0.8/Newtonsoft.Json.6.0.8.nupkg
+/Hub/packages/Newtonsoft.Json.6.0.8/lib/net20/Newtonsoft.Json.xml
+/Hub/packages/Newtonsoft.Json.6.0.8/lib/net35/Newtonsoft.Json.xml
+/Hub/packages/Newtonsoft.Json.6.0.8/lib/net40/Newtonsoft.Json.xml
+/Hub/packages/Newtonsoft.Json.6.0.8/lib/net45/Newtonsoft.Json.xml
+/Hub/packages/Newtonsoft.Json.6.0.8/lib/netcore45/Newtonsoft.Json.xml
+/Hub/packages/Newtonsoft.Json.6.0.8/lib/portable-net40+sl5+wp80+win8+wpa81/Newtonsoft.Json.xml
+/Hub/packages/Newtonsoft.Json.6.0.8/lib/portable-net45+wp80+win8+wpa81+aspnetcore50/Newtonsoft.Json.xml
+/Hub/packages/Newtonsoft.Json.6.0.8/tools/install.ps1
+/Hub/packages/SharpZipLib.0.86.0/SharpZipLib.0.86.0.nupkg
+/Hub/packages/SimpleRESTServices.1.3.0.1/SimpleRESTServices.1.3.0.1.nupkg
+/Hub/packages/SimpleRESTServices.1.3.0.1/lib/net35/SimpleRESTServices.xml
+/Hub/packages/SimpleRESTServices.1.3.0.1/lib/net40/SimpleRESTServices.xml
+/Hub/packages/SmartThreadPool.dll.2.2.3/SmartThreadPool.dll.2.2.3.nupkg
+/Hub/packages/System.Spatial.5.7.0/System.Spatial.5.7.0.nupkg
+/Hub/packages/System.Spatial.5.7.0/lib/net40/System.Spatial.xml
+/Hub/packages/System.Spatial.5.7.0/lib/portable-net40+sl5+wp8+win8+wpa/System.Spatial.xml
+/Hub/packages/System.Spatial.5.7.0/lib/portable-net45+wp8+win8+wpa/System.Spatial.xml
+/Hub/packages/System.Spatial.5.7.0/lib/sl4/System.Spatial.xml
+/Hub/packages/WindowsAzure.ServiceBus.2.5.4/WindowsAzure.ServiceBus.2.5.4.nupkg
+/Hub/packages/WindowsAzure.ServiceBus.2.5.4/content/app.config.transform
+/Hub/packages/WindowsAzure.ServiceBus.2.5.4/content/web.config.transform
+/Hub/packages/WindowsAzure.ServiceBus.2.5.4/lib/net40-full/Microsoft.ServiceBus.xml
+/Hub/packages/WindowsAzure.Storage.2.1.0.0/WindowsAzure.Storage.2.1.0.0.nupkg
+/Hub/packages/WindowsAzure.Storage.2.1.0.0/lib/net40/Microsoft.WindowsAzure.Storage.xml
+/Hub/packages/openstack.net.1.3.1.0/lib/net35/openstacknet.xml
+/Hub/packages/openstack.net.1.3.1.0/lib/net40/openstacknet.xml
+/Hub/packages/openstack.net.1.3.1.0/openstack.net.1.3.1.0.nupkg
+/Hub/packages/protobuf-net.2.0.0.668/lib/net20-cf/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/net20/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/net30/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/net35-cf/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/net35/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/net40-cf/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/net40/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/netcore45/protobuf-net.XML
+/Hub/packages/protobuf-net.2.0.0.668/lib/netcore45/protobuf-net.pri
+/Hub/packages/protobuf-net.2.0.0.668/lib/portable-sl4+net40+wp7+windows8/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/sl3-wp/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/sl4-windowsphone71/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/sl4/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/lib/windowsphone8/protobuf-net.xml
+/Hub/packages/protobuf-net.2.0.0.668/protobuf-net.2.0.0.668.nupkg
