--- a/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
+++ b/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
@@ -50,6 +50,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HomeConfiguration.cs" />
     <Compile Include="HomeMonitorSvc.cs" />
     <Compile Include="EnvironmentMonitor.cs" />
     <Compile Include="HomeModule.cs" />
